# boring

./: .gitattributes  .gitignore  .gitmodules  .rusty-hook.toml  CHANGELOG.md  Cargo.toml  README.md  RELEASE_NOTES  THIRD_PARTY  cliff.toml  flake.nix  justfile  rust-toolchain.toml
.github/workflows/: ci.yml  prefix.yml  semgrep.yml
boring/: Cargo.toml  LICENSE
boring-sys/: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  build.rs
boring-sys/cmake/: aarch64-linux.cmake  armv7-linux.cmake
boring-sys/patches/: bad-cert-verification.patch  boring-pq.patch  boringssl-44b3df6f03d85c901767250329c571db405122d5.patch  full_cloudflare_ppq_kyber.cc  full_cloudflare_ppq_ssl_key_share.cc  rama_boring_pq.patch  rama_set_extension_order.patch  rama_set_raw_cipher_list.patch  rama_tls.patch  relax-rsa-key-usage-enforcement.patch  rpk.patch  underscore-wildcards.patch
boring-sys/patches/rpk-patch/include/openssl/: ssl.h.patch  tls1.h.patch
boring-sys/patches/rpk-patch/ssl/: extensions.cc.patch  handshake.cc.patch  internal.h.patch  ssl_cert.cc.patch  ssl_lib.cc.patch  tls13_both.cc.patch  tls13_server.cc.patch
boring-sys/scripts/: apply_pq_patch.sh  apply_rpk_patch.sh
boring-sys/src/: bn.rs  conf.rs  crypto.rs  dh.rs  ec.rs  evp.rs  hmac.rs  lib.rs  macros.rs  mlkem_dummy.rs  obj_mac.rs  ossl_typ.rs  pkcs12.rs  rand.rs  rsa.rs  sha.rs  srtp.rs  ssl3.rs  x509.rs  x509_vfy.rs  x509v3.rs
boring/examples/: fips_enabled.rs  mk_certs.rs
boring/src/: aead.rs  aes.rs  asn1.rs  base64.rs  bio.rs  bn.rs  conf.rs  curve25519.rs  derive.rs  dh.rs  dsa.rs  ec.rs  ecdsa.rs  error.rs  ex_data.rs  fips.rs  hash.rs  hmac.rs  hpke.rs  lib.rs  libc_types.rs  macros.rs  memcmp.rs  mldsa.rs  mlkem.rs  nid.rs  pkcs12.rs  pkcs5.rs  pkey.rs  prf.rs  rand.rs  rsa.rs  sha.rs  sign.rs  srtp.rs  stack.rs  string.rs  symm.rs  util.rs  version.rs
boring/src/ssl/: async_callbacks.rs  bio.rs  callbacks.rs  cert_compression.rs  connector.rs  credential.rs  ech.rs  error.rs  mod.rs  mut_only.rs
boring/src/ssl/test/: cert_compressor.rs  cert_verify.rs  custom_verify.rs  ech.rs  mod.rs  private_key_method.rs  server.rs  session.rs  session_resumption.rs  verify.rs
boring/src/x509/: crl.rs  extension.rs  mod.rs  store.rs  tests.rs  verify.rs
boring/src/x509/tests/: mod.rs  trusted_first.rs
boring/test/: bad_sig.pem  cert-wildcard.pem  cert-with-intermediate.pem  crl.pem  echconfig  echconfig-2  echconfiglist  echconfiglist-2  echkey  echkey-2  empty_crl.pem  generate-rsa-key-usage-relaxed-certs.sh  intermediate-ca.key  intermediate-ca.pem  invalid_crl.pem  root-ca-2.key  root-ca-2.pem  root-ca-cross.pem  rsa-key-usage-relaxed-ca.pem  rsa-key-usage-relaxed-key.pem  rsa-key-usage-relaxed.pem
hyper-boring/: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
hyper-boring/src/: cache.rs  client.rs  lib.rs  stream.rs  test.rs  v0.rs  v1.rs
hyper-boring/test/: key.pem
hyper-boring/tests/: hyper1.rs  v0.rs  v1.rs
openssl/: Cargo.toml  build.rs
openssl-sys/: Cargo.toml  build.rs
openssl-sys/src/: aes.rs  asn1.rs  bio.rs  bn.rs  crypto.rs  dh.rs  dsa.rs  ec.rs  err.rs  evp.rs  hmac.rs  lib.rs  obj_mac.rs  ossl_typ.rs  pem.rs  pkcs7.rs  rand.rs  rsa.rs  sha.rs  ssl.rs  stack.rs  tls1.rs  x509.rs  x509_vfy.rs  x509v3.rs
openssl/src/: aes.rs  asn1.rs  base64.rs  bio.rs  bn.rs  conf.rs  dh.rs  dsa.rs  ec.rs  ecdsa.rs  error.rs  hash.rs  lib.rs  nid.rs  pkcs12.rs  pkcs5.rs  pkcs7.rs  pkey.rs  rand.rs  rsa.rs  sign.rs  stack.rs  string.rs  symm.rs  version.rs
openssl/src/ssl/: callbacks.rs  connector.rs  mod.rs
openssl/src/ssl/test/: mod.rs
openssl/src/x509/: mod.rs  store.rs  tests.rs
scripts/: publish.sh
systest/: Cargo.toml  build.rs
systest/src/: main.rs
tokio-boring/: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
tokio-boring/examples/: simple-async.rs
tokio-boring/src/: async_callbacks.rs  bridge.rs  lib.rs
tokio-boring/tests/: async_custom_verify.rs  async_get_session.rs  async_private_key_method.rs  async_select_certificate.rs  cert.pem  client_server.rs  google.rs  pubkey.der  pubkey2.der  rpk.rs
tokio-boring/tests/common/: mod.rs
