[workspace]
members = [
    "boring",
    "boring-sys",
    "tokio-boring",
    "hyper-boring"
]
resolver = "2"

[workspace.package]
version = "4.17.0"
repository = "https://github.com/cloudflare/boring"
edition = "2021"

[workspace.metadata.release]
pre-release-commit-message = "Release {{version}}"
shared-version = true
tag-prefix = ""
publish = false

[workspace.dependencies]
boring-sys = { version = "4.17.0", path = "./boring-sys" }
boring = { version = "4.17.0", path = "./boring" }
tokio-boring = { version = "4.17.0", path = "./tokio-boring" }

bindgen = { version = "0.72.0", default-features = false, features = ["runtime"] }
bytes = "1"
cmake = "0.1.18"
fs_extra = "1.3.0"
fslock = "0.2"
bitflags = "2.4"
foreign-types = "0.5"
libc = "0.2"
hex = "0.4"
rusty-hook = "^0.11"
futures = "0.3"
tokio = "1"
anyhow = "1"
antidote = "1.0.0"
http = "1"
http-body-util = "0.1.2"
http_old = { package = "http", version = "0.2" }
hyper = { git = "https://github.com/scraptors/hyper", rev = "d512c79b9209b4e82abd75b35e88c3e88863be75" }
hyper-util = { git = "https://github.com/scraptors/hyper-util", rev = "a83e94b8d83242ca50d6e82c94fa6423b40ec9d9" }
hyper_old = { package = "hyper", version = "0.14", default-features = false }
linked_hash_set = "0.1"
openssl-macros = "0.1.1"
tower = "0.4"
tower-layer = "0.3"
tower-service = "0.3"
autocfg = "1.3.0"
brotli = "6.0"
