[workspace]
members = ["boring", "boring-sys", "tokio-boring"]
resolver = "2"

[workspace.package]
version = "0.5.0"
repository = "https://github.com/plabayo/rama-boring"
# we should stick on edition 2021 until ecosystem is ready,
# and perhaps let cloudflare do it if ever,
# for now let's stick to 2021 with MSRV 1.82
edition = "2021"
rust-version = "1.82"

[workspace.metadata.release]
pre-release-commit-message = "Release {{version}}"
shared-version = true
tag-prefix = ""
publish = false

[workspace.dependencies]
rama-boring = { version = "0.5.0", path = "./boring" }
rama-boring-sys = { version = "0.5.0", path = "./boring-sys" }
rama-boring-tokio = { version = "0.5.0", path = "./tokio-boring" }

antidote = "1.0.0"
anyhow = "1"
bindgen = { version = "0.72.0", default-features = false, features = [
    "runtime",
] }
bitflags = "2.9"
brotli = "8.0"
bytes = "1"
cmake = "0.1.54"
foreign-types = "0.5"
fs_extra = "1.3.0"
fslock = "0.2"
futures = "0.3"
hex = "0.4"
libc = "0.2"
linked_hash_set = "0.1"
openssl-macros = "0.1.1"
rusty-hook = "^0.11"
tokio = "1"
