[workspace]
members = [
    "boring",
    "boring-sys",
    "tokio-boring",
    "hyper-boring"
]
resolver = "2"

[workspace.package]
version = "5.0.0"
rust-version = "1.85"
repository = "https://github.com/cloudflare/boring"
edition = "2021"

[workspace.metadata.release]
pre-release-commit-message = "Release {{version}}"
shared-version = true
tag-prefix = ""
publish = false

[workspace.dependencies]
boring-sys = { version = "5.0.0", path = "./boring-sys", default-features = false }
boring = { version = "5.0.0", path = "./boring", default-features = false }
tokio-boring = { version = "5.0.0", path = "./tokio-boring", default-features = false }

bindgen = { version = "0.72.0", default-features = false, features = ["runtime"] }
bitflags = "2.9"
brotli = "8.0"
bytes = "1"
cmake = "0.1.54"
fs_extra = "1.3.0"
fslock = "0.2"
foreign-types = "0.5"
libc = "0.2"
hex = "0.4"
rusty-hook = "^0.11"
futures = "0.3"
tokio = "1"
anyhow = "1"
antidote = "1.0.0"
http = "1"
http-body-util = "0.1.2"
hyper = "1"
hyper-util = "0.1.6"
linked_hash_set = "0.1"
openssl-macros = "0.1.1"
tower = "0.4"
tower-layer = "0.3"
tower-service = "0.3"
