[package]
name = "rama-boring-sys"
version = { workspace = true }
authors = [
    "Alex Crichton <alex@alexcrichton.com>",
    "Steven Fackler <sfackler@gmail.com>",
    "Ivan Nikulin <ifaaan@gmail.com>",
    "Glen De Cauwsemaecker <glen@plabayo.tech>",
]
license = "MIT"
description = "FFI bindings to BoringSSL for Rama"
repository = { workspace = true }
documentation = "https://docs.rs/rama-boring-sys"
links = "boringssl"
build = "build/main.rs"
readme = "README.md"
categories = ["cryptography", "external-ffi-bindings"]
edition = { workspace = true }
rust-version = { workspace = true }
include = [
    "/*.md",
    "/*.toml",
    "/LICENSE-MIT",
    "/cmake/*.cmake",
    "/deps/boringssl/util/32-bit-toolchain.cmake",
    "/deps/boringssl/util/go_tests.txt",
    "/deps/boringssl/**/*.[chS]",
    "/deps/boringssl/**/*.asm",
    "/deps/boringssl/sources.json",
    "/deps/boringssl/crypto/obj/obj_mac.num",
    "/deps/boringssl/crypto/obj/objects.txt",
    "/deps/boringssl/**/*.bzl",
    "/deps/boringssl/**/*.bazel",
    "/deps/boringssl/**/*.bazel.lock",
    "/deps/boringssl/**/*.bazelignore",
    "/deps/boringssl/**/*.bazelrc",
    "/deps/boringssl/**/*.bazelversion",
    "/deps/boringssl/**/*.clang-format",
    "/deps/boringssl/**/*.cc",
    "/deps/boringssl/**/*.inc",
    "/deps/boringssl/cmake/*.cmake",
    "/deps/boringssl/**/CMakeLists.txt",
    "/deps/boringssl/**/sources.cmake",
    "/deps/boringssl/build.json",
    "/deps/boringssl/LICENSE",
    "/build/*",
    "/src",
    "/patches",
]

[package.metadata.docs.rs]
features = []
rustdoc-args = ["--cfg", "docsrs"]

[features]

[build-dependencies]
bindgen = { workspace = true }
cmake = { workspace = true }
fs_extra = { workspace = true }
fslock = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(const_fn)'] }
