[package]
name = "openssl-sys"
version = "0.9.58"
authors = ["Alex Crichton <alex@alexcrichton.com>",
           "Steven Fackler <sfackler@gmail.com>"]
license = "MIT"
description = "FFI bindings to OpenSSL"
repository = "https://github.com/sfackler/rust-openssl"
readme = "README.md"
categories = ["cryptography", "external-ffi-bindings"]

[dependencies]
libc = "0.2"

[build-dependencies]
cmake = "0.1"
