[package]
name = "rama-boring-tokio"
version = { workspace = true }
authors = [
    "Alex Crichton <alex@alexcrichton.com>",
    "Ivan Nikulin <ifaaan@gmail.com>",
    "Glen De Cauwsemaecker <glen@plabayo.tech>",
]
license = "MIT OR Apache-2.0"
edition = { workspace = true }
repository = { workspace = true }
homepage = "https://github.com/plabayo/rama-boring"
documentation = "https://docs.rs/rama-boring-tokio"
description = """
An implementation of SSL streams for Tokio backed by BoringSSL in function of Rama
"""

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
rama-boring = { workspace = true }
rama-boring-sys = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true, features = ["full"] }
