[package]
name = "tokio-boring"
version = { workspace = true }
authors = ["Alex Crichton <alex@alexcrichton.com>", "Ivan Nikulin <ifaaan@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }
homepage = "https://github.com/cloudflare/boring"
documentation = "https://docs.rs/tokio-boring"
description = """
An implementation of SSL streams for Tokio backed by BoringSSL
"""

[package.metadata.docs.rs]
features = ["rpk"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["boring/default"]

# Use a FIPS-validated version of boringssl.
fips = ["boring/fips", "boring-sys/fips"]

# Enables Raw public key API (https://datatracker.ietf.org/doc/html/rfc7250)
rpk = ["boring/rpk"]

[dependencies]
boring = { workspace = true, default-features = false }
boring-sys = { workspace = true, default-features = false }
tokio = { workspace = true }

[dev-dependencies]
futures = { workspace = true }
tokio = { workspace = true, features = [ "full" ] }
anyhow = { workspace = true }
